syntax = "proto3";

package NAlice.NIoT.NVulpix;

option go_package = "a.yandex-team.ru/alice/iot/vulpix/protos";

message BroadcastStartApplyArguments {
    string Token = 1;
    uint32 TimeoutMs = 2;
    string SpeakerRoom = 3;
}

message BroadcastSuccessApplyArguments {
    string DevicesID = 1;
}

message BroadcastFailureApplyArguments {
    uint32 TimeoutMs = 1;
    string Reason = 2;
}

message DiscoveryCancelApplyArguments {
    string SpeakerID = 1;
}

message ConnectApplyArguments {
    string DeviceType = 1;
}

message DiscoveryFailureApplyArguments {
    uint32 TimeoutMs = 1;
    string Reason = 2;
    string DeviceType = 3;
}

message TApplyArguments {
    oneof Value {
        BroadcastFailureApplyArguments BroadcastFailureApplyArguments = 1;
        BroadcastSuccessApplyArguments BroadcastSuccessApplyArguments = 2;
        BroadcastStartApplyArguments BroadcastStartApplyArguments = 3;
        DiscoveryCancelApplyArguments DiscoveryCancelApplyArguments = 4;
        ConnectApplyArguments ConnectApplyArguments = 5;
        DiscoveryFailureApplyArguments DiscoveryFailureApplyArguments = 6;
    }
};

