syntax = "proto3";

import "alice/protos/data/lat_lon.proto";
import "mapreduce/yt/interface/protos/extension.proto";
import "alice/protos/extensions/extensions.proto";

import "google/protobuf/descriptor.proto";

// todo: move to new namespace
package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";
option java_outer_classname = "FrameProto";

message TStringSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string StringValue = 1 [json_name = "string_value", (NYT.column_name) = "string_value", (SlotType) = "string"];
        string SpecialPlaylistValue = 2 [json_name = "special_playlist_value", (NYT.column_name) = "special_playlist_value", (SlotType) = "special_playlist"];
        string NewsTopicValue = 3 [json_name = "news_topic_value", (NYT.column_name) = "news_topic_value", (SlotType) = "custom.news_topic"];
        string SpecialAnswerInfoValue = 4 [json_name = "special_answer_info", (NYT.column_name) = "special_answer_info", (SlotType) = "special_answer_info"];
        string VideoContentTypeValue = 5 [json_name = "video_content_type_value", (NYT.column_name) = "video_content_type_value", (SlotType) = "video_content_type"];
        string VideoActionValue = 6 [json_name = "video_action_value", (NYT.column_name) = "video_action_value", (SlotType) = "video_action"];
        // reserved 7;
        string ActionRequestValue = 8 [json_name = "action_request_value", (NYT.column_name) = "action_request_value", (SlotType) = "action_request"];
        string EpochValue = 9 [json_name = "epoch_value", (NYT.column_name) = "epoch_value", (SlotType) = "epoch"];
        string VideoSelectionActionValue = 10 [json_name = "video_selection_action_value", (NYT.column_name) = "video_selection_action_value", (SlotType) = "custom.video_selection_action"];

        // Do not add fields here. Please create a new slot type for new types or try to reuse already existing.
    }
}

message TUInt32SlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        uint32 UInt32Value = 1 [json_name = "uint32_value", (NYT.column_name) = "uint32_value", (SlotType) = "uint32"];
    }
}

message TNumSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        uint32 NumValue = 1 [json_name = "num_value", (NYT.column_name) = "num_value", (SlotType) = "num"];
    }
}

message TDoubleSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Value {
        double DoubleValue = 1 [json_name = "double_value", (NYT.column_name) = "double_value", (SlotType) = "double"];
    }
}

message TBoolSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        bool BoolValue = 1 [json_name = "bool_value", (NYT.column_name) = "bool_value", (SlotType) = "bool"];
    }
}

message TNotificationSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string SubscriptionValue = 1 [json_name = "subscription_value", (NYT.column_name) = "subscription_value", (SlotType) = "custom.notification_subscription"];
    }
}

// SpecialPlaylist, SpecialAnswerInfo and ActionRequest are left in TStringSlot for compatibility
message TMusicSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string GenreValue = 1 [json_name = "genre_value", (NYT.column_name) = "genre_value", (SlotType) = "genre"];
        string MoodValue = 2 [json_name = "mood_value", (NYT.column_name) = "mood_value", (SlotType) = "mood"];
        string ActivityValue = 3 [json_name = "activity_value", (NYT.column_name) = "activity_value", (SlotType) = "activity"];
        string VocalValue = 4 [json_name = "vocal_value", (NYT.column_name) = "vocal_value", (SlotType) = "vocal"];
        string NoveltyValue = 5 [json_name = "novelty_value", (NYT.column_name) = "novelty_value", (SlotType) = "novelty"];
        string PersonalityValue = 6 [json_name = "personality_value", (NYT.column_name) = "personality_value", (SlotType) = "personality"];
        string OrderValue = 7 [json_name = "order_value", (NYT.column_name) = "order_value", (SlotType) = "order"];
        string RepeatValue = 8 [json_name = "repeat_value", (NYT.column_name) = "repeat_value", (SlotType) = "repeat"];
        string RoomValue = 9 [json_name = "room_value", (NYT.column_name) = "room_value", (SlotType) = "room"];
        string StreamValue = 10 [json_name = "stream_value", (NYT.column_name) = "stream_value", (SlotType) = "stream"];
        string GenerativeStationValue = 11 [json_name = "generative_station_value", (NYT.column_name) = "generative_station_value", (SlotType) = "generative_station"];
        string NeedSimilarValue = 12 [json_name = "need_similar_value", (NYT.column_name) = "need_similar_value", (SlotType) = "need_similar"];
        string OffsetValue = 13 [json_name = "offset_value", (NYT.column_name) = "offset_value", (SlotType) = "offset_value"];
    }
}

message TVideoSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string NewValue = 1 [json_name = "new_value", (NYT.column_name) = "new_value", (SlotType) = "video_new"];
    }
}

message TLanguageSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string LanguageValue = 1 [json_name = "language_value", (NYT.column_name) = "language_value", (SlotType) = "language"];
    }
}

message TDateTimeSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        string DateTimeValue = 1 [json_name = "datetime_value", (NYT.column_name) = "datetime_value", (SlotType) = "datetime"];
    }
}

message TUnitsTimeSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Value {
        string StringValue = 1 [json_name = "string_value", (NYT.column_name) = "string_value", (SlotType) = "string"];
        string UnitsTimeValue = 2 [json_name = "units_time_value", (NYT.column_name) = "units_time_value", (SlotType) = "sys.units_time"];
    }
}

message THardcodedResponseNameSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Value {
        option (NYT.variant_field_name) = "value";
        string HardcodedResponseNameValue = 1 [json_name = "hardcoded_response_value", (NYT.column_name) = "hardcoded_response_value", (SlotType) = "custom.response_name"];
    }
}

message TWhereSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Value {
        string WhereValue = 1 [json_name = "where_value", (NYT.column_name) = "where_value", (SlotType) = "custom.where"];
        string SpecialLocationValue = 2 [json_name = "special_location_value", (NYT.column_name) = "special_location_value", (SlotType) = "special_location"];
        NData.TLatLon LatLonValue = 3 [json_name = "lat_lon_value", (NYT.column_name) = "lat_lon_value", (SlotType) = "lat_lon"];
    }
}

message TLocationSlotSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Value {
        option (NYT.variant_field_name) = "value";
        string UserIotRoomValue = 1 [json_name = "user_iot_room_value", (NYT.column_name) = "user_iot_room_value", (SlotType) = "user.iot.room"];
        string DeviceIotRoomValue = 2 [json_name = "device_iot_room_value", (NYT.column_name) = "device_iot_room_value", (SlotType) = "device.iot.room"];
        string UserIotGroupValue = 3 [json_name = "user_iot_group_value", (NYT.column_name) = "user_iot_group_value", (SlotType) = "user.iot.group"];
        string DeviceIotGroupValue = 4 [json_name = "device_iot_group_value", (NYT.column_name) = "device_iot_group_value", (SlotType) = "device.iot.group"];
        string UserIotDeviceValue = 5 [json_name = "user_iot_device_value", (NYT.column_name) = "user_iot_device_value", (SlotType) = "user.iot.device"];
        string DeviceIotDeviceValue = 6 [json_name = "device_iot_device_value", (NYT.column_name) = "device_iot_device_value", (SlotType) = "device.iot.device"];
        string UserIotMultiroomAllDevicesValue = 7 [json_name = "user_iot_multiroom_all_devices_value", (NYT.column_name) = "user_iot_multiroom_all_devices_value", (SlotType) = "user.iot.multiroom_all_devices"];
        string DeviceIotMultiroomAllDevicesValue = 8 [json_name = "device_iot_multiroom_all_devices_value", (NYT.column_name) = "device_iot_multiroom_all_devices_value", (SlotType) = "device.iot.multiroom_all_devices"];
    }
}

message TIoTDiscoveryStartSemanticFrameSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    option (SemanticFrameName) = "alice.iot.voice_discovery.start.v2";
    TStringSlotSample SSID = 1 [json_name = "ssid", (NYT.column_name) = "ssid", (SlotName) = "ssid"];
    TStringSlotSample Password = 2 [json_name = "password", (NYT.column_name) = "password", (SlotName) = "password"];
    TStringSlotSample DeviceType = 3 [json_name = "device_type", (NYT.column_name) = "device_type", (SlotName) = "device_type"];
    TUInt32SlotSample TimeoutMs = 4 [json_name = "timeout_ms", (NYT.column_name) = "timeout_ms", (SlotName) = "timeout_ms"];
}

message TNewsSemanticFrameSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    option (SemanticFrameName) = "personal_assistant.scenarios.get_news";

    TStringSlotSample Topic = 1 [json_name = "topic", (NYT.column_name) = "topic", (SlotName) = "topic"];
    TNumSlotSample MaxCount = 2 [json_name = "max_count", (NYT.column_name) = "max_count", (SlotName) = "max_count"];
    TBoolSlotSample SkipIntroAndEnding = 3 [json_name = "skip_intro_and_ending", (NYT.column_name) = "skip_intro_and_ending", (SlotName) = "skip_intro_and_ending"];
    TWhereSlotSample Where = 5 [json_name = "where", (NYT.column_name) = "where", (SlotName) = "where"];
    TBoolSlotSample DisableVoiceButtons = 6 [json_name = "disable_voice_buttons", (NYT.column_name) = "disable_voice_buttons", (SlotName) = "disable_voice_buttons"];
    TBoolSlotSample GoBack = 7 [json_name = "go_back", (NYT.column_name) = "go_back", (SlotName) = "go_back"];
    TNumSlotSample NewsIdx = 8 [json_name = "news_idx", (NYT.column_name) = "news_idx", (SlotName) = "news_idx"];
    TBoolSlotSample SingleNews = 9 [json_name = "single_news", (NYT.column_name) = "single_news", (SlotName) = "single_news"];
}

message TTypedSemanticFrameSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Type {
        TNewsSemanticFrameSample NewsSemanticFrame = 6 [json_name = "news_semantic_frame", (NYT.column_name) = "news_semantic_frame"];
        TIoTDiscoveryStartSemanticFrameSample IoTDiscoveryStartSemanticFrame = 31 [json_name = "iot_discovery_start", (NYT.column_name) = "iot_discovery_start"];
    }
}
